chore: cards unificadas, imágenes locales y botones Maps; limpieza de diagnósticos editor

--- a/gastronomia.html
+++ b/gastronomia.html
@@ -41,34 +41,54 @@
         <h2>Platos típicos</h2>
         <div class="dishes-grid">
             <article class="dish-card">
-                <img src="https://images.unsplash.com/photo-1546549039-49d1eae5d62e?auto=format&fit=crop&w=1200&q=80" alt="Queso Majorero" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/gastronomia/queso-majorero.jpg" alt="Queso Majorero" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                 <div class="dish-info">
                     <h3>Queso Majorero</h3>
                     <p>El famoso queso de Fuerteventura con Denominación de Origen Protegida, elaborado con leche de cabra.</p>
+                    <div class="features">
+                        <span><i class="fas fa-cheese"></i> Tradicional</span>
+                        <span><i class="fas fa-award"></i> DOP</span>
+                        <span><i class="fas fa-seedling"></i> Km 0</span>
+                    </div>
                 </div>
             </article>
 
             <article class="dish-card">
-                <img src="https://images.unsplash.com/photo-1604908177820-6d0842d30f59?auto=format&fit=crop&w=1200&q=80" alt="Papas Arrugadas" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/gastronomia/papas-arrugadas.jpg" alt="Papas Arrugadas" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                 <div class="dish-info">
                     <h3>Papas Arrugadas con Mojo</h3>
                     <p>Patatas pequeñas cocidas con sal y servidas con las típicas salsas canarias: mojo rojo y mojo verde.</p>
+                    <div class="features">
+                        <span><i class="fas fa-utensils"></i> Tradicional</span>
+                        <span><i class="fas fa-pepper-hot"></i> Mojo rojo</span>
+                        <span><i class="fas fa-leaf"></i> Mojo verde</span>
+                    </div>
                 </div>
             </article>
 
             <article class="dish-card">
-                <img src="https://images.unsplash.com/photo-1490474418585-ba9bad8fd0ea?auto=format&fit=crop&w=1200&q=80" alt="Gofio" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/gastronomia/gofio.jpg" alt="Gofio" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                 <div class="dish-info">
                     <h3>Gofio</h3>
                     <p>Harina tostada tradicional canaria, utilizada en múltiples preparaciones desde postres hasta platos principales.</p>
+                    <div class="features">
+                        <span><i class="fas fa-bread-slice"></i> Tradicional</span>
+                        <span><i class="fas fa-cookie-bite"></i> Dulce/Salado</span>
+                        <span><i class="fas fa-wind"></i> Molino</span>
+                    </div>
                 </div>
             </article>
 
             <article class="dish-card">
-                <img src="https://images.unsplash.com/photo-1553621042-f6e147245754?auto=format&fit=crop&w=1200&q=80" alt="Pescado Local" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/gastronomia/pescado-local.jpg" alt="Pescado Local" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                 <div class="dish-info">
                     <h3>Pescado Local</h3>
                     <p>Vieja, cherne y otras especies locales preparadas a la plancha o en sancocho.</p>
+                    <div class="features">
+                        <span><i class="fas fa-fish"></i> Pescado del día</span>
+                        <span><i class="fas fa-map-marker-alt"></i> Local</span>
+                        <span><i class="fas fa-utensils"></i> Sancocho</span>
+                    </div>
                 </div>
             </article>
         </div>
@@ -87,39 +107,146 @@
     <section class="image-gallery">
         <h2>Galería de sabores</h2>
         <div class="gallery-grid">
-            <img src="https://images.unsplash.com/photo-1514516345957-556ca7d90aaf?auto=format&fit=crop&w=1200&q=80" alt="Tabla de quesos" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
-            <img src="https://images.unsplash.com/photo-1512058564366-18510be2db19?auto=format&fit=crop&w=1200&q=80" alt="Mojo y papas" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
-            <img src="https://images.unsplash.com/photo-1548943487-a2e4e43b4853?auto=format&fit=crop&w=1200&q=80" alt="Pescado a la plancha" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+            <img src="images/gastronomia/galeria-quesos.jpg" alt="Tabla de quesos" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+            <img src="images/gastronomia/mojo-papas.jpg" alt="Mojo y papas" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+            <img src="images/gastronomia/pescado-plancha.jpg" alt="Pescado a la plancha" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
         </div>
     </section>
 
     <section class="restaurants">
         <h2>Restaurantes recomendados</h2>
         <div class="restaurants-grid">
-            <div class="restaurant-card">
-                <h3>Restaurantes en Corralejo</h3>
-                <ul>
-                    <li>La Casa del Mar - Pescados y mariscos</li>
-                    <li>El Majorero - Cocina tradicional</li>
-                    <li>La Marquesina - Tapas y vinos</li>
-                </ul>
-            </div>
-            <div class="restaurant-card">
-                <h3>Restaurantes en Puerto del Rosario</h3>
-                <ul>
-                    <li>Casa Santa María - Cocina canaria</li>
-                    <li>La Taberna - Tapas y quesos</li>
-                    <li>El Mirador - Vistas al mar</li>
-                </ul>
-            </div>
-            <div class="restaurant-card">
-                <h3>Restaurantes en Morro Jable</h3>
-                <ul>
-                    <li>La Laja - Pescado fresco</li>
-                    <li>Casa Marcos - Cocina casera</li>
-                    <li>El Faro - Cocina internacional</li>
-                </ul>
-            </div>
+            <!-- Corralejo -->
+            <article class="restaurant-card">
+                <img src="images/restaurantes/la-casa-del-mar.jpg" alt="La Casa del Mar" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="restaurant-info">
+                    <h3>La Casa del Mar</h3>
+                    <p class="location"><i class="fas fa-map-marker-alt"></i> Corralejo</p>
+                    <p>Pescados y mariscos con producto local y vistas al mar.</p>
+                    <div class="features">
+                        <span><i class="fas fa-fish"></i> Pescado</span>
+                        <span><i class="fas fa-ship"></i> Marisco</span>
+                        <span><i class="fas fa-water"></i> Vistas</span>
+                    </div>
+                    <a class="btn btn-small" target="_blank" rel="noopener" href="https://www.google.com/maps/search/?api=1&query=La+Casa+del+Mar+Corralejo"><i class="fas fa-map-marked-alt"></i> Ver en Maps</a>
+                </div>
+            </article>
+            <article class="restaurant-card">
+                <img src="images/restaurantes/el-majorero.jpg" alt="El Majorero" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="restaurant-info">
+                    <h3>El Majorero</h3>
+                    <p class="location"><i class="fas fa-map-marker-alt"></i> Corralejo</p>
+                    <p>Cocina tradicional canaria con productos de kilómetro 0.</p>
+                    <div class="features">
+                        <span><i class="fas fa-utensils"></i> Tradicional</span>
+                        <span><i class="fas fa-seedling"></i> Km 0</span>
+                        <span><i class="fas fa-cheese"></i> Queso</span>
+                    </div>
+                    <a class="btn btn-small" target="_blank" rel="noopener" href="https://www.google.com/maps/search/?api=1&query=El+Majorero+Corralejo"><i class="fas fa-map-marked-alt"></i> Ver en Maps</a>
+                </div>
+            </article>
+            <article class="restaurant-card">
+                <img src="images/restaurantes/la-marquesina.jpg" alt="La Marquesina" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="restaurant-info">
+                    <h3>La Marquesina</h3>
+                    <p class="location"><i class="fas fa-map-marker-alt"></i> Corralejo</p>
+                    <p>Tapas y vinos en un ambiente acogedor junto al mar.</p>
+                    <div class="features">
+                        <span><i class="fas fa-cheese"></i> Tapas</span>
+                        <span><i class="fas fa-wine-glass"></i> Vinos</span>
+                        <span><i class="fas fa-water"></i> Vistas</span>
+                    </div>
+                    <a class="btn btn-small" target="_blank" rel="noopener" href="https://www.google.com/maps/search/?api=1&query=La+Marquesina+Corralejo"><i class="fas fa-map-marked-alt"></i> Ver en Maps</a>
+                </div>
+            </article>
+
+            <!-- Puerto del Rosario -->
+            <article class="restaurant-card">
+                <img src="images/restaurantes/casa-santa-maria.jpg" alt="Casa Santa María" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="restaurant-info">
+                    <h3>Casa Santa María</h3>
+                    <p class="location"><i class="fas fa-map-marker-alt"></i> Puerto del Rosario</p>
+                    <p>Cocina canaria con recetas tradicionales y entorno histórico.</p>
+                    <div class="features">
+                        <span><i class="fas fa-landmark"></i> Canaria</span>
+                        <span><i class="fas fa-star"></i> Tradicional</span>
+                        <span><i class="fas fa-church"></i> Histórico</span>
+                    </div>
+                    <a class="btn btn-small" target="_blank" rel="noopener" href="https://www.google.com/maps/search/?api=1&query=Casa+Santa+Mar%C3%ADa+Puerto+del+Rosario"><i class="fas fa-map-marked-alt"></i> Ver en Maps</a>
+                </div>
+            </article>
+            <article class="restaurant-card">
+                <img src="images/restaurantes/la-taberna.jpg" alt="La Taberna" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="restaurant-info">
+                    <h3>La Taberna</h3>
+                    <p class="location"><i class="fas fa-map-marker-alt"></i> Puerto del Rosario</p>
+                    <p>Tapas y quesos locales con buena selección de vinos.</p>
+                    <div class="features">
+                        <span><i class="fas fa-cheese"></i> Quesos</span>
+                        <span><i class="fas fa-stroopwafel"></i> Tapas</span>
+                        <span><i class="fas fa-wine-glass"></i> Vinos</span>
+                    </div>
+                    <a class="btn btn-small" target="_blank" rel="noopener" href="https://www.google.com/maps/search/?api=1&query=La+Taberna+Puerto+del+Rosario"><i class="fas fa-map-marked-alt"></i> Ver en Maps</a>
+                </div>
+            </article>
+            <article class="restaurant-card">
+                <img src="images/restaurantes/el-mirador.jpg" alt="El Mirador" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="restaurant-info">
+                    <h3>El Mirador</h3>
+                    <p class="location"><i class="fas fa-map-marker-alt"></i> Puerto del Rosario</p>
+                    <p>Restaurante con vistas al mar y especialidad en pescado.</p>
+                    <div class="features">
+                        <span><i class="fas fa-water"></i> Vistas</span>
+                        <span><i class="fas fa-fish"></i> Pescado</span>
+                        <span><i class="fas fa-umbrella-beach"></i> Terraza</span>
+                    </div>
+                    <a class="btn btn-small" target="_blank" rel="noopener" href="https://www.google.com/maps/search/?api=1&query=El+Mirador+Puerto+del+Rosario"><i class="fas fa-map-marked-alt"></i> Ver en Maps</a>
+                </div>
+            </article>
+
+            <!-- Morro Jable -->
+            <article class="restaurant-card">
+                <img src="images/restaurantes/la-laja.jpg" alt="La Laja" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="restaurant-info">
+                    <h3>La Laja</h3>
+                    <p class="location"><i class="fas fa-map-marker-alt"></i> Morro Jable</p>
+                    <p>Pescado fresco del día y cocina marinera.</p>
+                    <div class="features">
+                        <span><i class="fas fa-fish"></i> Pescado</span>
+                        <span><i class="fas fa-icicles"></i> Fresco</span>
+                        <span><i class="fas fa-fire"></i> Parrilla</span>
+                    </div>
+                    <a class="btn btn-small" target="_blank" rel="noopener" href="https://www.google.com/maps/search/?api=1&query=La+Laja+Morro+Jable"><i class="fas fa-map-marked-alt"></i> Ver en Maps</a>
+                </div>
+            </article>
+            <article class="restaurant-card">
+                <img src="images/restaurantes/casa-marcos.jpg" alt="Casa Marcos" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="restaurant-info">
+                    <h3>Casa Marcos</h3>
+                    <p class="location"><i class="fas fa-map-marker-alt"></i> Morro Jable</p>
+                    <p>Cocina casera con productos locales y recetas tradicionales.</p>
+                    <div class="features">
+                        <span><i class="fas fa-home"></i> Casera</span>
+                        <span><i class="fas fa-seedling"></i> Km 0</span>
+                        <span><i class="fas fa-utensils"></i> Tradicional</span>
+                    </div>
+                    <a class="btn btn-small" target="_blank" rel="noopener" href="https://www.google.com/maps/search/?api=1&query=Casa+Marcos+Morro+Jable"><i class="fas fa-map-marked-alt"></i> Ver en Maps</a>
+                </div>
+            </article>
+            <article class="restaurant-card">
+                <img src="images/restaurantes/el-faro-restaurante.jpg" alt="El Faro" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="restaurant-info">
+                    <h3>El Faro</h3>
+                    <p class="location"><i class="fas fa-map-marker-alt"></i> Morro Jable</p>
+                    <p>Oferta internacional con vistas al océano.</p>
+                    <div class="features">
+                        <span><i class="fas fa-globe"></i> Internacional</span>
+                        <span><i class="fas fa-water"></i> Vistas</span>
+                        <span><i class="fas fa-cocktail"></i> Cócteles</span>
+                    </div>
+                    <a class="btn btn-small" target="_blank" rel="noopener" href="https://www.google.com/maps/search/?api=1&query=El+Faro+Morro+Jable+restaurante"><i class="fas fa-map-marked-alt"></i> Ver en Maps</a>
+                </div>
+            </article>
         </div>
     </section>
 
