--- a/noticia.html
+++ b/noticia.html
@@ -78,8 +78,7 @@
 	</footer>
 
 	<script src="js/main.js"></script>
-	<script src="js/proxy-discovery.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js"></script>
-	<script src="js/content-loader.js"></script>
+	<script src="js/article-loader.js"></script>
 </body>
 </html>
