--- a/playas.html
+++ b/playas.html
@@ -38,59 +38,200 @@
     </section>
 
     <section class="beaches-content">
-        <h2>Nuestras mejores playas</h2>
-        <div class="beaches-grid">
-            <article class="beach-card">
-                <img src="https://images.unsplash.com/photo-1533105079780-92b9be482077?auto=format&fit=crop&w=1200&q=80" alt="Grandes Playas de Corralejo" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
-                <div class="beach-info">
-                    <h3>Grandes Playas de Corralejo</h3>
-                    <p>Kilómetros de arena dorada junto a las famosas dunas del parque natural. Ideal para deportes acuáticos, paseos largos y familias que buscan playas amplias.</p>
-                    <div class="beach-features">
-                        <span><i class="fas fa-parking"></i> Parking</span>
-                        <span><i class="fas fa-umbrella-beach"></i> Sombrillas</span>
-                        <span><i class="fas fa-wind"></i> Windsurf</span>
+        <div class="container">
+            <h2>Las Mejores Playas de Fuerteventura</h2>
+            <p class="intro-text">Descubre más de 150 playas con aguas cristalinas y arena dorada. Aquí te presentamos las imprescindibles.</p>
+            
+            <div class="beaches-grid">
+                <article class="beach-card">
+                    <img src="images/playas/corralejo.jpeg" alt="Grandes Playas de Corralejo" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <div class="beach-info">
+                        <h3>Grandes Playas de Corralejo</h3>
+                        <div class="beach-location">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Corralejo, Norte de Fuerteventura</span>
+                        </div>
+                        <p>Extensión de más de 10km de arena blanca y fina junto al Parque Natural de las Dunas. Aguas turquesas poco profundas, perfectas para familias. Zona norte con viento ideal para windsurf y kitesurf.</p>
+                        <div class="beach-features">
+                            <span><i class="fas fa-parking"></i> Aparcamiento</span>
+                            <span><i class="fas fa-umbrella-beach"></i> Hamacas</span>
+                            <span><i class="fas fa-wind"></i> Windsurf</span>
+                            <span><i class="fas fa-utensils"></i> Chiringuitos</span>
+                        </div>
+                        <a href="https://maps.app.goo.gl/9QYVZCqKz8xYnRms7" target="_blank" rel="noopener" class="btn btn-small">
+                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                        </a>
                     </div>
-                </div>
-            </article>
+                </article>
 
-            <article class="beach-card">
-                <img src="https://images.unsplash.com/photo-1528184039930-bd03972bd974?auto=format&fit=crop&w=1200&q=80" alt="Playa de Cofete" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
-                <div class="beach-info">
-                    <h3>Playa de Cofete</h3>
-                    <p>Una de las playas más salvajes y espectaculares, con 12km de arena dorada y montañas de fondo. Acceso por pista: lleva agua y revisa el estado del camino.</p>
-                    <div class="beach-features">
-                        <span><i class="fas fa-camera"></i> Vistas</span>
-                        <span><i class="fas fa-hiking"></i> Salvaje</span>
-                        <span><i class="fas fa-exclamation-triangle"></i> Sin servicios</span>
+                <article class="beach-card">
+                    <img src="images/playas/cofete.jpeg" alt="Playa de Cofete" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <div class="beach-info">
+                        <h3>Playa de Cofete</h3>
+                        <div class="beach-location">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Península de Jandía, Pájara</span>
+                        </div>
+                        <p>12km de playa virgen considerada una de las más bellas de España. Paisaje salvaje con montañas de fondo y el misterioso Villa Winter. Acceso por pista de tierra (4x4 recomendado). Oleaje fuerte, precaución al bañarse.</p>
+                        <div class="beach-features">
+                            <span><i class="fas fa-hiking"></i> Playa virgen</span>
+                            <span><i class="fas fa-camera"></i> Paisajes únicos</span>
+                            <span><i class="fas fa-exclamation-triangle"></i> Corrientes fuertes</span>
+                            <span><i class="fas fa-car"></i> 4x4 recomendado</span>
+                        </div>
+                        <a href="https://maps.app.goo.gl/eQqH9BrZU5pxjvWc6" target="_blank" rel="noopener" class="btn btn-small">
+                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                        </a>
                     </div>
-                </div>
-            </article>
+                </article>
 
-            <article class="beach-card">
-                <img src="https://images.unsplash.com/photo-1534531688091-a458257992c9?auto=format&fit=crop&w=1200&q=80" alt="Playas de El Cotillo" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
-                <div class="beach-info">
-                    <h3>Playas de El Cotillo</h3>
-                    <p>Conjunto de calas y lagunas de agua cristalina, perfectas para el baño y el snorkel.</p>
-                    <div class="beach-features">
-                        <span><i class="fas fa-swimming-pool"></i> Piscinas naturales</span>
-                        <span><i class="fas fa-fish"></i> Snorkel</span>
-                        <span><i class="fas fa-parking"></i> Parking</span>
+                <article class="beach-card">
+                    <img src="images/playas/cotillo.jpeg" alt="Lagos de El Cotillo" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <div class="beach-info">
+                        <h3>Lagos de El Cotillo</h3>
+                        <div class="beach-location">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>El Cotillo, La Oliva</span>
+                        </div>
+                        <p>Serie de calas protegidas con piscinas naturales de aguas cristalinas. Ideal para familias con niños pequeños. El Aljibe de la Cueva es perfecto para snorkel. Al sur, playa Los Lagos con olas para surf.</p>
+                        <div class="beach-features">
+                            <span><i class="fas fa-child"></i> Familias</span>
+                            <span><i class="fas fa-swimming-pool"></i> Piscinas naturales</span>
+                            <span><i class="fas fa-fish"></i> Snorkel</span>
+                            <span><i class="fas fa-parking"></i> Parking cercano</span>
+                        </div>
+                        <a href="https://maps.app.goo.gl/fQ3t7wkB9nMz8zGK8" target="_blank" rel="noopener" class="btn btn-small">
+                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                        </a>
                     </div>
-                </div>
-            </article>
+                </article>
 
-            <article class="beach-card">
-                <img src="https://images.unsplash.com/photo-1500375592092-40eb2168fd21?auto=format&fit=crop&w=1200&q=80" alt="Playa de Sotavento" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
-                <div class="beach-info">
-                    <h3>Playa de Sotavento</h3>
-                    <p>Famosa por sus aguas turquesas y perfecta para la práctica de windsurf y kitesurf.</p>
-                    <div class="beach-features">
-                        <span><i class="fas fa-wind"></i> Deportes acuáticos</span>
-                        <span><i class="fas fa-umbrella-beach"></i> Servicios</span>
-                        <span><i class="fas fa-school"></i> Escuelas</span>
+                <article class="beach-card">
+                    <img src="images/playas/sotavento.jpeg" alt="Playa de Sotavento" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <div class="beach-info">
+                        <h3>Playa de Sotavento</h3>
+                        <div class="beach-location">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Costa Calma - Jandía, Pájara</span>
+                        </div>
+                        <p>9km de playa paradisíaca con laguna que se forma con la marea baja. Sede del Campeonato Mundial de Windsurf y Kitesurf. Vientos alisios constantes y escuelas de deportes acuáticos. Zona de aguas tranquilas y zona de olas.</p>
+                        <div class="beach-features">
+                            <span><i class="fas fa-wind"></i> Windsurf/Kitesurf</span>
+                            <span><i class="fas fa-trophy"></i> Campeonatos</span>
+                            <span><i class="fas fa-school"></i> Escuelas</span>
+                            <span><i class="fas fa-umbrella-beach"></i> Servicios completos</span>
+                        </div>
+                        <a href="https://maps.app.goo.gl/xZXF4qYRPnN5Y7xU6" target="_blank" rel="noopener" class="btn btn-small">
+                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                        </a>
                     </div>
-                </div>
-            </article>
+                </article>
+
+                <article class="beach-card">
+                    <img src="images/playas/ajuy.jpeg" alt="Playa de Ajuy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <div class="beach-info">
+                        <h3>Playa de Ajuy (Playa Negra)</h3>
+                        <div class="beach-location">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Ajuy, Pájara</span>
+                        </div>
+                        <p>Pequeña playa de arena negra volcánica con encanto especial. Famosa por sus cuevas marinas visitables a pie. Pueblo pesquero auténtico con excelentes restaurantes de pescado fresco. Oleaje moderado.</p>
+                        <div class="beach-features">
+                            <span><i class="fas fa-mountain"></i> Arena volcánica</span>
+                            <span><i class="fas fa-dungeon"></i> Cuevas marinas</span>
+                            <span><i class="fas fa-fish"></i> Pueblo pesquero</span>
+                            <span><i class="fas fa-utensils"></i> Restaurantes</span>
+                        </div>
+                        <a href="https://maps.app.goo.gl/vK8qMYz6Tp3JxRWJ9" target="_blank" rel="noopener" class="btn btn-small">
+                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                        </a>
+                    </div>
+                </article>
+
+                <article class="beach-card">
+                    <img src="images/playas/morrojable.jpeg" alt="Playa de Morro Jable" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <div class="beach-info">
+                        <h3>Playa de Morro Jable</h3>
+                        <div class="beach-location">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Morro Jable, Pájara</span>
+                        </div>
+                        <p>Playa urbana de 4km con paseo marítimo, ideal para familias. Aguas tranquilas y servicios completos. Ambiente turístico con hoteles, restaurantes y tiendas. Puerto con excursiones en barco a playas cercanas.</p>
+                        <div class="beach-features">
+                            <span><i class="fas fa-city"></i> Playa urbana</span>
+                            <span><i class="fas fa-child"></i> Familias</span>
+                            <span><i class="fas fa-umbrella-beach"></i> Todos los servicios</span>
+                            <span><i class="fas fa-ship"></i> Excursiones</span>
+                        </div>
+                        <a href="https://maps.app.goo.gl/JkH3rM8vC6Sq7ePe8" target="_blank" rel="noopener" class="btn btn-small">
+                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                        </a>
+                    </div>
+                </article>
+
+                <article class="beach-card">
+                    <img src="images/playas/laconcha.webp" alt="Playa de La Concha" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <div class="beach-info">
+                        <h3>Playa de La Concha</h3>
+                        <div class="beach-location">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>El Cotillo, La Oliva</span>
+                        </div>
+                        <p>Playa protegida en forma de concha con aguas muy tranquilas. Perfecta para niños y personas mayores. Arena blanca y fina. Suele estar concurrida en temporada alta por su belleza y tranquilidad.</p>
+                        <div class="beach-features">
+                            <span><i class="fas fa-baby"></i> Ideal niños</span>
+                            <span><i class="fas fa-water"></i> Aguas tranquilas</span>
+                            <span><i class="fas fa-parking"></i> Parking</span>
+                            <span><i class="fas fa-heart"></i> Muy popular</span>
+                        </div>
+                        <a href="https://maps.app.goo.gl/RnP7h5WxqsNfY2Yz8" target="_blank" rel="noopener" class="btn btn-small">
+                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                        </a>
+                    </div>
+                </article>
+
+                <article class="beach-card">
+                    <img src="images/playas/esquinzo.jpeg" alt="Playa de Esquinzo" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <div class="beach-info">
+                        <h3>Playa de Esquinzo (Butihondo)</h3>
+                        <div class="beach-location">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Esquinzo, Pájara</span>
+                        </div>
+                        <p>Playa tranquila entre acantilados con arena dorada. Menos masificada que otras playas del sur. Ideal para quienes buscan tranquilidad. Buen acceso y aparcamiento gratuito. Pequeños chiringuitos en temporada alta.</p>
+                        <div class="beach-features">
+                            <span><i class="fas fa-people-carry"></i> Tranquila</span>
+                            <span><i class="fas fa-mountain"></i> Entre acantilados</span>
+                            <span><i class="fas fa-parking"></i> Parking gratuito</span>
+                            <span><i class="fas fa-umbrella-beach"></i> Servicios básicos</span>
+                        </div>
+                        <a href="https://maps.app.goo.gl/mJNb8pKvY3Q4rFrTA" target="_blank" rel="noopener" class="btn btn-small">
+                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                        </a>
+                    </div>
+                </article>
+
+                <article class="beach-card">
+                    <img src="images/playas/matorral.jpg" alt="Playa del Matorral" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                    <div class="beach-info">
+                        <h3>Playa del Matorral</h3>
+                        <div class="beach-location">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <span>Morro Jable, Pájara</span>
+                        </div>
+                        <p>Continuación natural de la playa de Morro Jable, menos urbanizada. Paseo litoral de 2km hasta el faro. Popular entre runners y caminantes. Observación de aves marinas. Arena clara y aguas limpias.</p>
+                        <div class="beach-features">
+                            <span><i class="fas fa-running"></i> Paseos</span>
+                            <span><i class="fas fa-crow"></i> Aves marinas</span>
+                            <span><i class="fas fa-lighthouse"></i> Faro cercano</span>
+                            <span><i class="fas fa-umbrella-beach"></i> Menos concurrida</span>
+                        </div>
+                        <a href="https://maps.app.goo.gl/uN6K9YqPxM5cVLdJ7" target="_blank" rel="noopener" class="btn btn-small">
+                            <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
+                        </a>
+                    </div>
+                </article>
+            </div>
         </div>
     </section>
 
