--- a/noticias.html
+++ b/noticias.html
@@ -155,6 +155,7 @@
     <script src="js/main.js"></script>
     <script src="js/proxy-discovery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js"></script>
+    <script src="js/image-extractor.js"></script>
     <script src="js/content-loader.js"></script>
     <script src="js/news.js"></script>
 </body>
