--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - This is Fuerteventura</title>
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="Contacta con This is Fuerteventura para cualquier consulta sobre turismo, alojamiento o información general sobre la isla.">
@@ -30,6 +31,7 @@
         </div>
     </header>
 
+    <main id="main">
     <section class="hero contact-hero">
         <div class="hero-content">
             <h2>Contacto</h2>
@@ -150,6 +152,8 @@
         </div>
     </section>
 
+    </main>
+
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
@@ -186,6 +190,6 @@
         </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/main.js" defer></script>
 </body>
 </html>
