--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is Fuerteventura - Tu guía completa de la isla</title>
     <meta name="theme-color" content="#0f4c81">
-    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="Descubre Fuerteventura: noticias, turismo, alojamiento, playas y mucho más sobre esta maravillosa isla canaria.">
@@ -13,12 +13,25 @@
     <meta property="og:title" content="This is Fuerteventura - Tu guía completa de la isla">
     <meta property="og:description" content="Descubre Fuerteventura: noticias, turismo, alojamiento, playas y mucho más sobre esta maravillosa isla canaria.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="/images/logo.jpg">
+    <meta property="og:image" content="images/logo.jpg">
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="This is Fuerteventura - Tu guía completa de la isla">
     <meta name="twitter:description" content="Descubre Fuerteventura: noticias, turismo, alojamiento, playas y mucho más sobre esta maravillosa isla canaria.">
-    <meta name="twitter:image" content="/images/logo.jpg">
+    <meta name="twitter:image" content="images/logo.jpg">
+        <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "WebSite",
+            "name": "This is Fuerteventura",
+            "url": "https://thisisfuerteventura.example/",
+            "potentialAction": {
+                "@type": "SearchAction",
+                "target": "https://thisisfuerteventura.example/noticias.html?q={search_term_string}",
+                "query-input": "required name=search_term_string"
+            }
+        }
+        </script>
 </head>
 <body>
     <a class="skip-link" href="#main">Saltar al contenido principal</a>
@@ -42,7 +55,7 @@
             <i class="fas fa-bars"></i>
         </div>
     </header>
-        <main id="main">
+    <main id="main">
     <section class="hero">
         <div class="hero-content">
             <h2>Bienvenido a Fuerteventura</h2>
@@ -63,25 +76,25 @@
         <h2>Explora Fuerteventura</h2>
         <div class="category-grid">
             <div class="category-card">
-                <img src="images/news.jpg" alt="Noticias de Fuerteventura" loading="lazy">
+                <img src="images/Fuerteventura.jpeg" alt="Noticias de Fuerteventura" loading="lazy">
                 <h3>Noticias</h3>
                 <p>Mantente al día con las últimas noticias de la isla.</p>
                 <a href="noticias.html" class="btn">Ver noticias</a>
             </div>
             <div class="category-card">
-                <img src="images/tourism.jpg" alt="Turismo en Fuerteventura" loading="lazy">
+                <img src="images/Fuerteventura.jpeg" alt="Turismo en Fuerteventura" loading="lazy">
                 <h3>Turismo</h3>
                 <p>Descubre los mejores lugares para visitar.</p>
                 <a href="turismo.html" class="btn">Explorar</a>
             </div>
             <div class="category-card">
-                <img src="images/accommodation.jpg" alt="Alojamiento en Fuerteventura" loading="lazy">
+                <img src="images/Fuerteventura.jpeg" alt="Alojamiento en Fuerteventura" loading="lazy">
                 <h3>Alojamiento</h3>
                 <p>Encuentra el lugar perfecto para hospedarte.</p>
                 <a href="alojamiento.html" class="btn">Ver opciones</a>
             </div>
             <div class="category-card">
-                <img src="images/beaches.jpg" alt="Playas de Fuerteventura" loading="lazy">
+                <img src="images/Fuerteventura.jpeg" alt="Playas de Fuerteventura" loading="lazy">
                 <h3>Playas</h3>
                 <p>Las mejores playas de arena blanca y aguas cristalinas.</p>
                 <a href="playas.html" class="btn">Descubrir</a>
@@ -97,6 +110,8 @@
             <button type="submit" class="btn">Suscribirse</button>
         </form>
     </section>
+
+    </main>
 
     <footer>
         <div class="footer-content">
@@ -133,11 +148,11 @@
             <p>&copy; 2025 This is Fuerteventura. Todos los derechos reservados.</p>
         </div>
     </footer>
-    </main>
 
-    <script src="js/main.js"></script>
-    <script src="js/proxy-discovery.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js"></script>
-    <script src="js/content-loader.js"></script>
+    <script src="js/main.js" defer></script>
+    <script src="js/proxy-discovery.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js" defer></script>
+    <script src="js/image-extractor.js" defer></script>
+    <script src="js/content-loader.js" defer></script>
 </body>
 </html>
