--- a/noticias.html
+++ b/noticias.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noticias de Fuerteventura - This is Fuerteventura</title>
     <meta name="theme-color" content="#0f4c81">
-    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="Las últimas noticias de Fuerteventura: actualidad, eventos, turismo y más.">
@@ -13,12 +13,12 @@
     <meta property="og:title" content="Noticias de Fuerteventura - This is Fuerteventura">
     <meta property="og:description" content="Las últimas noticias de Fuerteventura: actualidad, eventos, turismo y más.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="/images/logo.jpg">
+    <meta property="og:image" content="images/logo.jpg">
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Noticias de Fuerteventura - This is Fuerteventura">
     <meta name="twitter:description" content="Las últimas noticias de Fuerteventura: actualidad, eventos, turismo y más.">
-    <meta name="twitter:image" content="/images/logo.jpg">
+    <meta name="twitter:image" content="images/logo.jpg">
         <script type="application/ld+json">
         {
             "@context": "https://schema.org",
@@ -115,6 +115,8 @@
         </form>
     </section>
 
+    </main>
+
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
@@ -150,13 +152,25 @@
             <p>&copy; 2025 This is Fuerteventura. Todos los derechos reservados.</p>
         </div>
     </footer>
-    </main>
 
-    <script src="js/main.js"></script>
-    <script src="js/proxy-discovery.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js"></script>
-    <script src="js/image-extractor.js"></script>
-    <script src="js/content-loader.js"></script>
-    <script src="js/news.js"></script>
+    <script>
+        // Si estamos en Netlify (o disponible el endpoint), usar Functions como proxy
+        (function(){
+            try {
+                const controller = new AbortController();
+                const id = setTimeout(() => controller.abort(), 700);
+                fetch('/.netlify/functions/api/health', { signal: controller.signal, cache: 'no-store' })
+                    .then(r => { if (r && r.ok) { window.__RSS_PROXY_URL = location.origin + '/.netlify/functions'; } })
+                    .catch(() => {})
+                    .finally(() => clearTimeout(id));
+            } catch (_) {}
+        })();
+    </script>
+    <script src="js/main.js" defer></script>
+    <script src="js/proxy-discovery.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js" defer></script>
+    <script src="js/image-extractor.js" defer></script>
+    <script src="js/content-loader.js" defer></script>
+    <script src="js/news.js" defer></script>
 </body>
 </html>
